syntax = "proto3";

option csharp_namespace = "ProjectName.PlanerService";

package planner;

// The Planner service definition
service Planner {
  // Creates an execution plan from user intent
  rpc CreatePlan (PlanRequest) returns (PlanResponse);
  
  // Health check endpoint
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
}

// Request message for CreatePlan
message PlanRequest {
  string intent = 1;
}

// Response message for CreatePlan
message PlanResponse {
  bool success = 1;
  string goal = 2;
  string analysis = 3;
  repeated PlanStepMessage steps = 4;
  string error_message = 5;
}

// Individual plan step
message PlanStepMessage {
  int32 order = 1;
  string action = 2;
  string tool = 3;
  string arguments_json = 4;
}

// Health check request
message HealthCheckRequest {
}

// Health check response
message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  
  ServingStatus status = 1;
  string message = 2;
}